<resources>
    <string name="app_name">Brokers Circle</string>
    <string name="domainName">www.brokerscircle.com</string>
    <string name="copyright">Copyright © 2019 BrokersCircle</string>
    <string name="already_account">Have an account</string>
    <string name="enter_account_info">Enter your credentials</string>
    <string name="createaccount">Create an account</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="subheading">A PLACE OF CONNECTION</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_or_phone">Email or Phone</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="office_name">Office Name</string>

    <string name="default_exp">Experience</string>
    <string name="default_since">Since Office</string>
    <string name="default_code">+92</string>
    <string name="default_company">Real State</string>
    <string name="termandcondition">I accept all terms and conditions</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>

    <!--Intro Screen String-->
    <string name="start">GOT IT</string>
    <string name="slide_1_title">BROKER TO BROKER LINK</string>
    <string name="slide_1_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="slide_2_title">PROPERTY LISTING</string>
    <string name="slide_2_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="slide_3_title">CHATTING</string>
    <string name="slide_3_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="continue_without_login">Continue without Login</string>
    <string name="profile">Profile</string>
    <!--End Intro Screen String-->

    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="new_post">New Post</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_your_password">RESET YOUR PASSWORD?</string>
    <string name="view_all">VIEW ALL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listing">Listing:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://brokerscirlce.pk/.well-known/assetlinks.json\" }]</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Preference Titles -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Messages Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <!-- Sync Preferences -->
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_maps">Map</string>
    <string name="lastname">Circle</string>
    <string name="firstname">Brokers</string>
    <string-array name="exp_list">
        <item>Experience</item>
        <item>1 – 3</item>
        <item>4 – 8</item>
        <item>9 – 12</item>
        <item>13 – 16</item>
        <item>17 - Above</item>
    </string-array>

    <string-array name="since_list">
        <item>Since Office</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
    </string-array>

    <string-array name="code_list">
        <item>Code</item>
        <item>+92</item>
        <item>+91</item>
        <item>+86</item>
    </string-array>

    <string-array name="company_list">
        <item>Company</item>
        <item>Makki Real Estate</item>
        <item>Sajad Real Estate</item>
    </string-array>

    <string-array name="country_list">
        <item>Country</item>
        <item>Paksitan</item>
        <item>UAE</item>
    </string-array>

    <string-array name="city_list">
        <item>City</item>
        <item>Karachi</item>
        <item>Lahore</item>
    </string-array>

    <string-array name="sign_up_steps">
        <item>Account Crediatial</item>
        <item>General Information</item>
        <item>Submit</item>
    </string-array>

    <string-array name="location_list">
        <item>Location</item>
        <item>Tauheed comercial area</item>
        <item>DHA</item>
    </string-array>


</resources>
