<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/cloud"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="brokerscirlce.com.Activities.MainActivity">

    <ImageView
        android:alpha="0.5"
        android:scaleType="fitXY"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@mipmap/logo"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shimmer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0.08"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/AppNameColor"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.08"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorMaroon"/>

        </LinearLayout>

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer_sub_tv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.08"
            android:layout_height="wrap_content"
            android:text="@string/subheading"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12dp"
            android:textColor="@color/AppSubNameColor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/already_account"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp"
                    android:letterSpacing="0.05" />

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonheight"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_blue"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/buttontextsizedefault"
                    android:letterSpacing="0.08"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="6dp"
                android:layout_weight="0.1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="or"
                android:letterSpacing="0.08"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/buttontextsizedefault"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Don't have an account"
                    android:letterSpacing="0.05"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonheight"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/round_blue"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/sign_up"
                    android:letterSpacing="0.08"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/buttontextsizedefault"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_without_ligin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonheight"
            android:layout_marginTop="15dp"
            android:visibility="gone"
            android:background="@drawable/round_blue_border"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/continue_without_login"
            android:textColor="@color/colorBlue"
            android:letterSpacing="0.08"
            android:textSize="@dimen/buttontextsizedefault"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/copyright"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <include layout="@layout/copyright_layout"/>

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/internet_connection_layout"/>

</RelativeLayout>