<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/cloud"
    android:backgroundTintMode="multiply"
    tools:context="brokerscircle.com.Activities.SplashActivity">

    <ImageView
        android:alpha="0.5"
        android:scaleType="fitXY"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_marginTop="85dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/logoshimer"
            app:shimmer_auto_start="true"
            app:shimmer_base_alpha="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@mipmap/logo"/>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.romainpiel.shimmer.ShimmerTextView
                android:id="@+id/shimmer_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:fontFamily="@font/roboto_regular"
                android:letterSpacing="0.08"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/AppNameColor"/>

            <com.romainpiel.shimmer.ShimmerTextView
                android:id="@+id/hub_shimmer_tv"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lastname"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.08"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/colorMaroon"/>

        </LinearLayout>

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer_sub_tv"
            android:layout_width="wrap_content"
            android:letterSpacing="0.08"
            android:layout_height="wrap_content"
            android:text="@string/subheading"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12dp"
            android:textColor="@color/AppSubNameColor"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer_copyright_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:letterSpacing="0.08"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/copyright_text_size"
            android:textColor="@color/colorBlack"/>

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer_web_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/domainName"
            android:letterSpacing="0.08"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textSize="@dimen/copyright_text_size"
            android:textColor="@color/colorBlack"/>

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/shimmer_loading_tv"
            android:layout_marginTop="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading"
            android:letterSpacing="0.08"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            android:textColor="@color/colorBlack"/>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorBlue" />

    </LinearLayout>

</RelativeLayout>